[package]
name = "apex_titan"
version = "87.0.0"
edition = "2021"

[dependencies]
# Ethereum
ethers = { version = "2.0", features = ["ws", "rustls", "abigen"] }
ethers-flashbots = "0.14"

# Async & Networking
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] } 
anyhow = "1.0"
url = "2.0"

# Data & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"

# Math & Graph
petgraph = "0.6"

# UI & Logging
colored = "2.0"
log = "0.4"
env_logger = "0.10"
